--- a/TWJieShuQuan/books/AddToLibraryViewController.xib
+++ b/TWJieShuQuan/books/AddToLibraryViewController.xib
@@ -19,8 +19,33 @@
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xVm-O9-Jrr">
+                    <rect key="frame" x="0.0" y="0.0" width="600" height="64"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="64" id="j79-C0-mHf"/>
+                    </constraints>
+                    <textAttributes key="titleTextAttributes">
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    </textAttributes>
+                    <items>
+                        <navigationItem title="添加入库" id="bUb-9F-t3W">
+                            <barButtonItem key="leftBarButtonItem" style="plain" id="see-GL-pV3">
+                                <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="CD0-hp-qkd">
+                                    <rect key="frame" x="16" y="27" width="50" height="30"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <state key="normal" title="取消">
+                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                    </state>
+                                    <connections>
+                                        <action selector="cancelButtonClicked:" destination="-1" eventType="touchUpInside" id="Hgy-xT-1gX"/>
+                                    </connections>
+                                </button>
+                            </barButtonItem>
+                        </navigationItem>
+                    </items>
+                </navigationBar>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zaY-VI-cXG">
-                    <rect key="frame" x="221" y="39" width="150" height="200"/>
+                    <rect key="frame" x="221" y="118" width="150" height="200"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="200" id="Gmm-Nf-3jS"/>
                         <constraint firstAttribute="width" secondItem="zaY-VI-cXG" secondAttribute="height" multiplier="256:293" constant="312" id="s0V-3X-Amh"/>
@@ -32,6 +57,28 @@
                         </mask>
                     </variation>
                 </imageView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="book name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MbO-Vu-8vS">
+                    <rect key="frame" x="247" y="355" width="99" height="24"/>
+                    <constraints>
+                        <constraint firstAttribute="width" secondItem="MbO-Vu-8vS" secondAttribute="height" multiplier="86:21" constant="312" id="72o-eX-7VZ"/>
+                        <constraint firstAttribute="width" constant="86" id="Gvt-Xe-X5c"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="72o-eX-7VZ"/>
+                            <exclude reference="Gvt-Xe-X5c"/>
+                        </mask>
+                    </variation>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="book author" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XNP-PP-Owc">
+                    <rect key="frame" x="255" y="384" width="83" height="18"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                    <color key="textColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dzC-na-9IB">
                     <rect key="frame" x="0.0" y="545" width="600" height="55"/>
                     <color key="backgroundColor" red="0.40000000596046448" green="0.80000001192092896" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -47,28 +94,6 @@
                         <action selector="addToLibraryButtonPressed:" destination="-1" eventType="touchUpInside" id="xqp-oO-BFW"/>
                     </connections>
                 </button>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="book name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MbO-Vu-8vS">
-                    <rect key="frame" x="247" y="276" width="99" height="24"/>
-                    <constraints>
-                        <constraint firstAttribute="width" secondItem="MbO-Vu-8vS" secondAttribute="height" multiplier="86:21" constant="312" id="72o-eX-7VZ"/>
-                        <constraint firstAttribute="width" constant="86" id="Gvt-Xe-X5c"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                    <nil key="highlightedColor"/>
-                    <variation key="default">
-                        <mask key="constraints">
-                            <exclude reference="72o-eX-7VZ"/>
-                            <exclude reference="Gvt-Xe-X5c"/>
-                        </mask>
-                    </variation>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="book author" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XNP-PP-Owc">
-                    <rect key="frame" x="255" y="305" width="83" height="18"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                    <color key="textColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
@@ -78,17 +103,22 @@
                 <constraint firstItem="MbO-Vu-8vS" firstAttribute="leading" secondItem="zaY-VI-cXG" secondAttribute="trailing" constant="-171" id="JOG-YO-Rkc"/>
                 <constraint firstAttribute="bottom" secondItem="dzC-na-9IB" secondAttribute="bottom" id="LYo-NZ-Cw1"/>
                 <constraint firstItem="dzC-na-9IB" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="MXR-tg-ZcI"/>
+                <constraint firstItem="xVm-O9-Jrr" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="Qsl-sv-p9y"/>
                 <constraint firstItem="MbO-Vu-8vS" firstAttribute="top" secondItem="zaY-VI-cXG" secondAttribute="top" constant="200" id="S5K-ha-jwY"/>
                 <constraint firstItem="XNP-PP-Owc" firstAttribute="top" secondItem="MbO-Vu-8vS" secondAttribute="bottom" constant="5" id="acd-5o-Xef"/>
                 <constraint firstItem="MbO-Vu-8vS" firstAttribute="top" secondItem="XNP-PP-Owc" secondAttribute="top" constant="-29" id="cNZ-BE-TXZ"/>
                 <constraint firstAttribute="centerX" secondItem="MbO-Vu-8vS" secondAttribute="centerX" id="csq-OL-qWC"/>
                 <constraint firstAttribute="centerX" secondItem="MbO-Vu-8vS" secondAttribute="centerX" constant="4" id="eEz-zl-awC"/>
+                <constraint firstItem="xVm-O9-Jrr" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="icV-Uh-alx"/>
                 <constraint firstItem="MbO-Vu-8vS" firstAttribute="top" secondItem="zaY-VI-cXG" secondAttribute="bottom" constant="37" id="l8h-h2-YZz"/>
                 <constraint firstAttribute="centerX" secondItem="XNP-PP-Owc" secondAttribute="centerX" constant="3.5" id="tHW-O9-H5U"/>
                 <constraint firstAttribute="centerY" secondItem="MbO-Vu-8vS" secondAttribute="centerY" constant="42.5" id="uM6-Us-2ev"/>
+                <constraint firstItem="zaY-VI-cXG" firstAttribute="top" secondItem="xVm-O9-Jrr" secondAttribute="bottom" constant="54" id="wEj-mb-nlQ"/>
+                <constraint firstAttribute="trailing" secondItem="xVm-O9-Jrr" secondAttribute="trailing" id="ykA-A3-gR5"/>
             </constraints>
             <variation key="default">
                 <mask key="constraints">
+                    <exclude reference="7yQ-Mk-jzT"/>
                     <exclude reference="JOG-YO-Rkc"/>
                     <exclude reference="S5K-ha-jwY"/>
                     <exclude reference="cNZ-BE-TXZ"/>
@@ -96,6 +126,7 @@
                     <exclude reference="uM6-Us-2ev"/>
                 </mask>
             </variation>
+            <point key="canvasLocation" x="299" y="550"/>
         </view>
     </objects>
 </document>
